# pkgd

./: .gitignore  README.md  install.sh  package-lock.json  package.json  pkgd  vite.config.js
drafts/: sudoxget.sh
images/: gallery.md
packaging/: postinst  prerm
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
