[package]
name = "pkgd"
version = "0.1.0"
description = "universal release installer"
authors = ["sudoxreboot"]
edition = "2021"

[lib]
name = "pkgd_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "pkgd-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
dirs = "5"
